<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liste_attente_client_titre"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="44dp"
        android:paddingEnd="32dp"
        android:paddingBottom="8dp">
        <TextView
            android:text="@string/attente_client_col_nom"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>

        <TextView
            android:text="@string/attente_client_col_email"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:textSize="12sp"/>

        <TextView
            android:text="@string/attente_client_col_ville"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>

        <TextView
            android:text="@string/attente_client_col_dateSaisie"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_clients_attente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>