<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liste_attente_commande_titre"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="48dp"
        android:paddingEnd="40dp"
        android:paddingBottom="8dp">
        <TextView
            android:text="@string/attente_commande_col_id"
            android:textStyle="bold"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/attente_commande_col_client"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/attente_commande_col_date"
            android:gravity="end"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_commandes_attente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>